# Ray_Tracing

./: CMakeLists.txt  README.md  Ray_tracing_main.cpp  frame.h  interface.cpp  materials.cpp  materials.h  plane.h  point_source.h  ray.h  rt.cpp  rt.h  sphere.h  vec.h  win.h
glut_drawing/: frame.h  win.h
math_classes/: vec.h
objects/: materials.h  plane.h  point_source.h  ray.h  sphere.h
tracing/: tracing.cpp  tracing.h
